--- a/javascript/study/web_image_making.html
+++ b/javascript/study/web_image_making.html
@@ -38,6 +38,28 @@
                 <li><a href="../effect/parallaxEffect01.html">패럴랙스 효과</a></li>
                 <li><a href="../effect/gameEffect01.html">게임 효과</a></li>
             </ul>
+            <ul class="study">
+                <li><a href="basic.html">기본 규칙</a></li>
+                <li><a href="operator.html">연산자</a></li>
+                <li><a href="for.html">반복문</a></li>
+                <li><a href="if.html">조건문</a></li>
+                <li><a href="type.html">데이터 타입</a></li>
+                <li><a href="function.html">함수</a></li>
+                <li><a href="var.html">지역변수/전역변수</a></li>
+                <li><a href="element.html">요소 선택</a></li>
+                <li><a href="web_search_effect.html">서치 이펙트</a></li>
+                <li><a href="web_slice.html">slice/substring/substr</a></li>
+                <li><a href="web_vector_bitmap.html">벡터와 비트맵</a></li>
+                <li><a href="web_standards.html">웹 표준</a></li>
+                <li><a href="web_pop_join_push.html">POP/JOIN/PUSH</a></li>
+                <li><a href="web_naejang.html">내장 함수</a></li>
+                <li><a href="web_media_query.html">미디어쿼리</a></li>
+                <li><a href="web_jeongyu.html">정규 표현식</a></li>
+                <li><a href="web_indexOf.html">indexOf()</a></li>
+                <li><a href="web_homework.html">사이트 예제 만들기</a></li>
+                <li><a href="web_replace_replaceAll.html">replace/replaceAll</a></li>
+                <li><a href="concat">concat</a></li>
+            </ul>
         </nav>
     </header>
     <!-- //header -->
@@ -71,91 +93,19 @@
             <div class="document">
                 <!-- 1번 -->
                 <div id="sample01" class="sample">
-                <h3 class="t_tit2">01. 문자열 : 문자열 결합 / 템플릿 문자열</h3>
-                <p class="t_desc2">템플릿 문자열은 내장된 표현식을 허용하는 문자열 리터럴이다.</p>
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col style="width: 5%">
-                            <col style="width: 32%">
-                            <col style="width: 22%">
-                            <col style="width: 42%">
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>번호</th>
-                                <th>기본값</th>
-                                <th>메서드</th>
-                                <th>리턴값</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="sample01_N1">1</td>
-                                <td class="sample01_Q1">자바스크립트, 제이쿼리</td>
-                                <td class="sample01_M1">문자열(string) 결합</td>
-                                <td class="sample01_P1">자바스크립트제이쿼리</td>
-                            </tr>
-                            <tr>
-                                <td class="sample01_N2">2</td>
-                                <td class="sample01_Q2">100, 200</td>
-                                <td class="sample01_M2">숫자(number) 결합</td>
-                                <td class="sample01_P2">300</td>
-                            </tr>
-                            <tr>
-                                <td class="sample01_N3">3</td>
-                                <td class="sample01_Q3">모던, 자바스크립트, 핵심</td>
-                                <td class="sample01_M3">문자열(string) 결합</td>
-                                <td class="sample01_P3">나는 모던(modern) 자바스크립트(javascript) 핵심을 배우고 싶다.</td>
-                            </tr>
-                            <tr>
-                                <td class="sample01_N4">4</td>
-                                <td class="sample01_Q4">모던, 자바스크립트, 핵심</td>
-                                <td class="sample01_M4">템플릿 문자열</td>
-                                <td class="sample01_P4">나는 모던(modern) 자바스크립트(javascipt) 핵심을 배우고 싶다.</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="script">
-                    <div class="t_code">
-            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-<pre><code class="language-js">// 01번
-const str1 = "자바스크립트";
-const str2 = "제이쿼리";
-
-document.querySelector(".sample01_N1").innerHTML="1";
-document.querySelector(".sample01_Q1").innerHTML="자바스크립트, 제이쿼리";
-document.querySelector(".sample01_M1").innerHTML="문자열(string) 결합";
-document.querySelector(".sample01_P1").innerHTML=str1 +" "+str2;
-
-// 02번
-const num1 = 100;
-const num2 = 200;
-
-document.querySelector(".sample01_N2").innerHTML="2";
-document.querySelector(".sample01_Q2").innerHTML="100, 200";
-document.querySelector(".sample01_M2").innerHTML="숫자(number) 결합";
-document.querySelector(".sample01_P2").innerHTML=num1 +" "+num2;
-
-// 03번
-const text1 = "모던";
-const text2 = "자바스크립트";
-const text3 = "핵심";
-
-document.querySelector(".sample01_N3").innerHTML="3";
-document.querySelector(".sample01_Q3").innerHTML="모던, 자바스크립트, 핵심";
-document.querySelector(".sample01_M3").innerHTML="문자열(string) 결합";
-document.querySelector(".sample01_P3").innerHTML="나는 " + text1 +"(modern) "+ text2 +"(javascript) "+ text3 + "을 배우고 싶다.";
-document.querySelector(".sample01_N4").innerHTML="4";
-document.querySelector(".sample01_Q4").innerHTML="모던, 자바스크립트, 핵심";
-document.querySelector(".sample01_M4").innerHTML="템플릿 문자열";
-document.querySelector(".sample01_P4").innerHTML=`나는 ${text1}(modern) ${text2}(modern) ${text3}(modern)`;
-</code></pre>
+                    <h2 class="t_tit2">어도비 일러스트레이터</h2>
+                    <p class="t_desc2_css">어도비 일러스트레이터는 벡터 이미지를 손쉽게 만들 수 있는데 이번 시간에는 펜툴을 이용한 벡터 이미지를 만들어보도록 하겠습니다</p>
+                    <p class="t_box">
+                        ::예시<br><br>
+                        
+                        "문자열".replace("찾을 문자열", "변경할 문자열")<br>
+                        "문자열".replace(정규식)<br>
+                        "문자열".replace(정규식, 변경할 문자열)<br>
+                        / 정규식 표현은 / / 이렇게 사용
+                    </p>
+                    
                 </div>
                 <!-- 1번 끝 -->
-            </div>
-            </div>
             </div>
 
         </main>
