--- a/javascript/study/web_image_making.html
+++ b/javascript/study/web_image_making.html
@@ -96,14 +96,14 @@
                     <h2 class="t_tit2">어도비 일러스트레이터</h2>
                     <p class="t_desc2_css">어도비 일러스트레이터는 벡터 이미지를 손쉽게 만들 수 있는데 이번 시간에는 펜툴을 이용한 벡터 이미지를 만들어보도록 하겠습니다</p>
                     <p class="t_box">
-                        ::예시<br><br>
-                        
-                        "문자열".replace("찾을 문자열", "변경할 문자열")<br>
-                        "문자열".replace(정규식)<br>
-                        "문자열".replace(정규식, 변경할 문자열)<br>
-                        / 정규식 표현은 / / 이렇게 사용
+                        하단의 예시 그림을 통해 펜툴로 그림을 그립니다.
                     </p>
-                    
+                    <img src="" alt="">
+                    <p class="t_desc2_css">완성</p>
+                    <p class="t_box">
+                        적절한 색상 배치를 통해 그림을 완성합니다!
+                    </p>
+
                 </div>
                 <!-- 1번 끝 -->
             </div>
