--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -1164,8 +1164,8 @@ console.log(currentStr2);
             //"문자열".charAt(숫자);
 
             const str1 = "javascript reference"
-            const currentStr1 = str1.charAt();      //ㅓ (4) ['e', 'e', 'e', 'e']
-            const currentStr2 = str1.charAt("0");   //ㅓ (4) ['e', 'e', 'e', 'e']
+            const currentStr1 = str1.charAt();      //j (4) ['e', 'e', 'e', 'e']
+            const currentStr2 = str1.charAt("0");   //j (4) ['e', 'e', 'e', 'e']
             const currentStr3 = str1.charAt("1");   //a (4) ['e', 'e', 'e', 'e']
             const currentStr4 = str1.charAt("2");   //v (4) ['e', 'e', 'e', 'e']
 
