--- a/javascript/study/web_search.html
+++ b/javascript/study/web_search.html
@@ -93,23 +93,47 @@
             <div class="document">
                 <!-- 1번 -->
                 <div id="sample01" class="sample">
-                    <h2 class="t_tit">펜툴</h2>
-                    <p class="t_desc2_css">어도비 일러스트레이터는 벡터 이미지를 손쉽게 만들 수 있는데 이번 시간에는 펜툴을 이용한 벡터 이미지를 만들어보도록 하겠습니다</p>
+                    <h3 class="t_tit2">search()</h3>
+                    <p class="t_desc2">search 함수는 indexOf랑 비슷한 역할을 담당하며, 숫자값과 위치값을 적지 않아도 찾아주는것이 특징입니다.</p>
                     <p class="t_box">
-                        오른쪽 하단에 위치한 예시 그림을 통해 펜툴을 이용해서 그림을 그립니다.
+                        ::사용방법<br><br>
+                        1. indexOf랑 비슷한 역할을 하며<br>
+                        2. 숫자값 위치값을 적지 않는다<br>
+                        3. "문자열".search("검색값");<br>
+                        4. "문자열".search(정규식 표현);<br>
                     </p>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_1.png" alt="">
-                    <hr>
-                    <p class="t_tit2" style="margin-top:20px;">완성</p>
-                    <p class="t_desc2_css">
-                        그림에 색을 입힐때에는 반드시 구조를 깨서 색을 입혀줘야합니다, 이유는 추후 이미지에 변형이 일어나면 구상하고 기획했던 치수에서 벗어날 가능성이 생기기에 꼭 유의하며 제작합니다
-                    </p>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_2.png" alt="">
+                    
+                    <div class="script">
+                        <div class="t_code">
+                <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">const str1 = "javascript reference"
 
+    const currentStr1 = str1.search("javascript");                // 0번째부터 값이 있고 있으니까 맨앞의 0이 나옵니다.
+    const currentStr2 = str1.search("reference");                 // 11이 나옵니다
+    const currentStr3 = str1.search("j");                         // 맨 앞에 j가 있으니 0이 나옵니다.
+    const currentStr4 = str1.search("a");                         // 맨 앞에 a가 있으니 j(1), a(중복), v(2), a(3) 그래서 3이 나옵니다.
+    const currentStr5 = str1.search("v");                         // 맨 앞에 v가 있으니 2이 나옵니다.
+    const currentStr6 = str1.search("jquery");                    // 맨 앞에 v가 있으니 -1이 나옵니다.
+    const currentStr7 = str1.search("b");                         // 맨 앞에 b가 있으니 -1이 나옵니다.
+    const currentStr8 = str1.search(/[a-z]/g);                    // a 부터 z까지 포함이 되어있기 때문에 0이 나옵니다.
+</code></pre>
+                        </div>
+                    </div>
+                    <details>
+                        <summary class="t_box">결과 보기</summary>
+                        <div class="t_box">
+                            0<br>
+                            11<br>
+                            0<br>
+                            3<br>
+                            2<br>
+                            -1<br>
+                            -1<br>
+                            0
+                        </div>
+                    </details>
                 </div>
-                <!-- 1번 끝 -->
             </div>
-
         </main>
         <!-- //main -->
 
