--- a/javascript/study/web_search_effect_02 copy.html
+++ b/javascript/study/web_search_effect_02 copy.html
@@ -683,10 +683,10 @@
                         4. forEach를 다시 사용해 searchList의 el(요소)를 활용합니다<br>
                         5. cssName이라는 변수를 만들고 그 안에는 el(요소)의 querySelector에 "strong" 태그를 넣고<br>
                         6. 만약(if) searchWord(.search__info:알파벳)의 첫번째 글자가 cssName(strong 태그)의 첫번째 글자와 같다면<br>
-                        7. 같으면 숨긴걸 hide 클래스를 지움(remove) 안같으면 hide 클래스를 추가(add)<br>
+                        7. 같으면 숨긴걸 hide 클래스를 지움(remove) 안같으면 hide 클래스를 추가(add)<br><br>
                         
-                        ::번외
-                        8. hidingNum 이라는 변수를 만들고 그 안에 모든 .search__list ul li에 클래스에 hide가 있는것을 선택
+                        ::번외<br>
+                        8. hidingNum 이라는 변수를 만들고 그 안에 모든 .search__list ul li에 클래스에 hide가 있는것을 선택<br>
                         9. searchInfo2(.search__info .num2)에 searchList.length(전체갯수) - hidingNum.length(숨긴갯수)를 넣어서 알파벳을 선택한 갯수를 구합니다.
                     </p>
                     <div class="script">
@@ -730,10 +730,10 @@ searchKeyword.forEach((el)=>{
                 <hr>
                 <div style="display:flex; justify-content:space-between; margin-left:20%; margin-right:20%;">
                     <div class="t_link">
-                        <a href="https://github.com/kimsangjunv1/coding/blob/main/javascript/effect/searchEffect02.html" target="blank">원본 소스 보기</a>
+                        <a href="https://github.com/kimsangjunv1/coding/blob/main/javascript/effect/searchEffect03.html" target="blank">원본 소스 보기</a>
                     </div>
                     <div class="t_link">
-                        <a href="https://kimsangjunv1.github.io/coding/javascript/effect/searchEffect02.html" target="blank">원본 페이지 보기</a>
+                        <a href="https://kimsangjunv1.github.io/coding/javascript/effect/searchEffect03.html" target="blank">원본 페이지 보기</a>
                     </div>
                 </div>
             </div>
