--- a/javascript/study/web_image_making_deer.html
+++ b/javascript/study/web_image_making_deer.html
@@ -93,7 +93,8 @@
             <div class="document">
                 <!-- 1번 -->
                 <div id="sample01" class="sample">
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px; box-sizing: border-box;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_3.png" alt="">
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_01.png" alt="">
+
                     <h2 class="t_tit">펜툴</h2>
                     <p class="t_desc2_css">어도비 일러스트레이터는 벡터 이미지를 손쉽게 만들 수 있는데 이번 시간에는 펜툴을 이용한 사슴 이미지를 만들어보도록 하겠습니다~~~</p>
                     <p class="t_box">
