--- a/javascript/study/web_image_making_deer.html
+++ b/javascript/study/web_image_making_deer.html
@@ -93,20 +93,47 @@
             <div class="document">
                 <!-- 1번 -->
                 <div id="sample01" class="sample">
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_01.png" alt="">
-
+                    
                     <h2 class="t_tit">펜툴</h2>
-                    <p class="t_desc2_css">어도비 일러스트레이터는 벡터 이미지를 손쉽게 만들 수 있는데 이번 시간에는 펜툴을 이용한 사슴 이미지를 만들어보도록 하겠습니다~~~</p>
-                    <p class="t_box">
-                        오른쪽 하단에 위치한 예시 그림을 통해 펜툴을 이용해서 그림을 그립니다.
-                    </p>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_1.png" alt="">
+                    <p class="t_desc2_css">어도비 일러스트레이터는 벡터 이미지를 손쉽게 만들 수 있는데<br>이번 시간에는 펜툴을 이용한 심경이 복잡해보이는 사슴 이미지를 만들어보도록 하겠습니다~~~</p>
                     <hr>
-                    <p class="t_tit2" style="margin-top:20px;">완성</p>
-                    <p class="t_desc2_css">
-                        그림에 색을 입힐때에는 반드시 구조를 깨서 색을 입혀줘야합니다, 이유는 추후 이미지에 변형이 일어나면 구상하고 기획했던 치수에서 벗어날 가능성이 생기기에 꼭 유의하며 제작합니다
+                    <p class="t_box">
+                        1. 시작이 좋습니다 이렇게 차근차근히 중심부터 그려나가봅니다.
                     </p>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_2.png" alt="">
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_01.jpg" alt="">
+                    <hr>
+                    <p class="t_box">
+                        2. 이때쯤부터 저도 사슴표정과 같아지기 시작합니다.
+                    </p>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_02.jpg" alt="">
+                    <hr>
+                    <p class="t_box">
+                        3. 다 한줄알고 줌 아웃 했던거였는데 제가 경솔했네요
+                    </p>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_03.jpg" alt="">
+                    <hr>
+                    <p class="t_box">
+                        4. 과정은 힘들었으나 이렇게 완성하고 보니 뿌듯하네요 ^^<br>
+                        다시 해볼거냐고 누군가 물어본다면 안할거같습니다.
+                    </p>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_04.jpg" alt="">
+                    <hr>
+                    <p class="t_box">
+                        5. 색도 이쁘게 넣어보았습니다 ^_^<br>
+                        색칠하고나니 더 뿌듯하네용
+                    </p>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_05.jpg" alt="">
+                    <hr>
+                    <p class="t_box">
+                        6. 다른 여러가지 색도 넣어보았습니다<br>
+                        근데 마음에 들었던건 없었고 마우스만 시계 바늘 계속 돌아가듯이 돌리기만 했네요
+                    </p>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_06.jpg" alt="">
+                    <hr>
+                    <h2 class="t_tit2">마치며..</h2>
+                    <p class="t_box">과정은 힘들었으나 다 완성된 모습을 보니 마음이 괜히 뿌듯해졌습니다
+                        덕분에 앞으로 그림은 제가 가지고 있던 아이패드로만 그려야겠다고 다짐하게 되었습니다.
+                    </p>
 
                 </div>
                 <!-- 1번 끝 -->
