--- a/javascript/study/web_quizEffect_06.html
+++ b/javascript/study/web_quizEffect_06.html
@@ -103,13 +103,13 @@
                 <!-- 1번 -->
                 <div id="sample01" class="sample">
                     <h2 class="t_tit2">HTML</h2>
-                    <p class="t_box">데이터 및 기본 구조를 아래와 같이 제작해줍니다.</p>
+                    <p class="t_desc2_css">데이터 및 기본 구조를 아래와 같이 제작해줍니다.</p>
                     <details>
                         <summary class="t_box">HTML 구조 전체보기</summary>
                         <div class="script">
                             <div class="t_code">
                                 <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-<pre><code class="language-css">&lt;main id="main"&gt;
+<pre><code class="language-html">&lt;main id="main"&gt;
     &lt;div class="quiz__wrap"&gt;
         &lt;div class="quiz"&gt;
             &lt;span class="quiz__type"&gt;${question.answerType}&lt;/span&gt;
@@ -158,6 +158,35 @@
                     <h2 class="t_tit2">Javascript</h2>
                     <p class="t_desc2_css">
                         quizScore 변수에 정답을 저장해서 맞은 갯수가 몇개인지 알려주는 문제 출제 예제를 만들어보겠습니다!
+                    </p>
+                    <h2 class="t_tit2">확인 버튼을 통해 다양한 성적 정보 알려주기</h2>
+                    <p class="t_box">
+                        하단의 스크립트를 통해 확인 버튼을 누르면 맞은개수, 총점, 탈락여부 알려주게 구성하였습니다.
+                    </p>
+                    <div class="script">
+                        <div class="t_code">
+                            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">
+// 정답 확인 버튼
+const answerQuiz = () =&gt; {
+    if(quizCount === quizInfo.length-1){
+        if(Math.floor(100/quizInfo.length*quizScore)&gt;=60){
+            quizConfirm.textContent = `총 ${quizInfo.length} 문제 중에 ${quizScore} 문제를 맞추었으며 총점 ${Math.floor(100/quizInfo.length*quizScore)} 점 합격 입니다.`
+        } else {
+            quizConfirm.textContent = `총 ${quizInfo.length} 문제 중에 ${quizScore} 문제를 맞추었으며 총점 ${Math.floor(100/quizInfo.length*quizScore)} 점 불합격 입니다.`
+        }
+    }
+    quizCount++
+    updateQuiz(quizCount);
+    quizView.classList.remove("like", "dislike");
+}
+</code></pre>
+                        </div>
+                    </div>
+                    <hr>
+                    <h2 class="t_tit2">전체적인 스크립트</h2>
+                    <p class="t_desc2_css">
+                        하단의 스크립트를 통해 전체적인 js 코드를 구성합니다.
                     </p>
                     <div class="script">
                         <div class="t_code">
@@ -253,6 +282,7 @@
 
     let quizCount = 0;
     let quizScore = "";
+    let ququ = Math.floor(100/quizInfo.length*quizScore)
 
     //문제 출력
     const updateQuiz = (index) =&gt; {
@@ -313,11 +343,16 @@
         }
         quizConfirm.style.display = "block"
     }
+    
 
     // 정답 확인 버튼
     const answerQuiz = () =&gt; {
         if(quizCount === quizInfo.length-1){
-            quizConfirm.textContent = "총"+quizInfo.length+"문제 중에"+quizScore+"문제를 맞추었습니다."
+            if(Math.floor(100/quizInfo.length*quizScore)&gt;=60){
+                quizConfirm.textContent = `총 ${quizInfo.length} 문제 중에 ${quizScore} 문제를 맞추었으며 총점 ${Math.floor(100/quizInfo.length*quizScore)} 점 합격 입니다.`
+            } else {
+                quizConfirm.textContent = `총 ${quizInfo.length} 문제 중에 ${quizScore} 문제를 맞추었으며 총점 ${Math.floor(100/quizInfo.length*quizScore)} 점 불합격 입니다.`
+            }
         }
         quizCount++
         updateQuiz(quizCount);
