--- a/javascript/study/web_image_making_deer.html
+++ b/javascript/study/web_image_making_deer.html
@@ -134,6 +134,11 @@
                     <p class="t_box">과정은 힘들었으나 다 완성된 모습을 보니 마음이 괜히 뿌듯해졌습니다
                         덕분에 앞으로 그림은 제가 가지고 있던 아이패드로만 그려야겠다고 다짐하게 되었습니다.
                     </p>
+                    <hr>
+                    <h2 class="t_tit2">번외 +</h2>
+                    <p class="t_box">저작권 free 목업을 통해 제작한 일러스트를 제품에 입혀봅니다.
+                    </p>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_screenshot_06.jpg" alt="">
 
                 </div>
                 <!-- 1번 끝 -->
