--- a/javascript/effect/quizEffect06.html
+++ b/javascript/effect/quizEffect06.html
@@ -109,9 +109,9 @@
                     "채도대비",
                     "계시대비",
                     "명도대비",
-                    "제품디자인"
+                    "한란대비"
                 ],
-                answerResult: "제품디자인",
+                answerResult: "한란대비",
                 answerEx: "색상을 순서를 정하여 연속적으로 시간차를 두고 보면서 각각 색이 보이는 변화로 음성잔상과 유사한 현상이며, 먼저 본 색의 잔상에 영향을 받습니다."
             },
             { //03번
@@ -127,45 +127,45 @@
                 answerResult: "고딕 건축의 고결함은 수직선을 대표한다.",
                 answerEx: "1~3번은 추상적인 개념의 선이고 4번은 현실의 선을 이야기 합니다.."
             },
-            // { //04번
-            //     answerType: "웹디자인 기능사 2014년 04회",
-            //     answerNum: "4",
-            //     answerAsk: "[그림 설명 : 높이/넓이 동일한 정사각형 가운데 원이 있고 그 원 주위에 붙은 작은 원들이 그려져 있고 또 한가지는 동일한 조건에 큰 원들이 그려져 있는 그림] 다음 두 개의 꽃 모양 중심에 있는 원의 실제 크기는 동일하 다. 그런데 위쪽의 원이 아래쪽보다 커 보이는 현상은?",
-            //     answerChoice: [
-            //         "주변과의 대비에 의한 착시현상",
-            //         "원근에 의한 착시현상",
-            //         "폐쇄원리에 의한 착시현상",
-            //         "연속원리에 의한 착시현상"
-            //     ],
-            //     answerResult: "주변과의 대비에 의한 착시현상",
-            //     answerEx: "주변의 사물로 인해 인간의 뇌가 착각을 일으켜 비교하는 대상의 상대적인 크기가 작아보이는 효과 입니다."
-            // },
-            // { //05번
-            //     answerType: "웹디자인 기능사 2014년 04회",
-            //     answerNum: "5",
-            //     answerAsk: "디자인 원리 중 구성 형식에서 중요한 역할을 하며, 부피, 중량 등 물리적인 구조와 색채에서 시각적인 안정감을 이룬 것을 말하며, 크게 대칭과 비대칭, 방사대칭으로 구분하는 것은?",
-            //     answerChoice: [
-            //         "반복",
-            //         "균형",
-            //         "조화",
-            //         "대비"
-            //     ],
-            //     answerResult: "균형",
-            //     answerEx: "시각적인 안정감을 위해서는 균형이 항상 중요합니다."
-            // },
-            // { //06번
-            //     answerType: "웹디자인 기능사 2014년 04회",
-            //     answerNum: "6",
-            //     answerAsk: "V(디자인가치)=P(성능)/C(비용) 와 관계있는 디자인 조건은?",
-            //     answerChoice: [
-            //         "합목적성",
-            //         "경제성",
-            //         "심미성",
-            //         "독창성"
-            //     ],
-            //     answerResult: "경제성",
-            //     answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
-            // }
+            { //04번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "4",
+                answerAsk: "[그림 설명 : 높이/넓이 동일한 정사각형 가운데 원이 있고 그 원 주위에 붙은 작은 원들이 그려져 있고 또 한가지는 동일한 조건에 큰 원들이 그려져 있는 그림] 다음 두 개의 꽃 모양 중심에 있는 원의 실제 크기는 동일하 다. 그런데 위쪽의 원이 아래쪽보다 커 보이는 현상은?",
+                answerChoice: [
+                    "주변과의 대비에 의한 착시현상",
+                    "원근에 의한 착시현상",
+                    "폐쇄원리에 의한 착시현상",
+                    "연속원리에 의한 착시현상"
+                ],
+                answerResult: "주변과의 대비에 의한 착시현상",
+                answerEx: "주변의 사물로 인해 인간의 뇌가 착각을 일으켜 비교하는 대상의 상대적인 크기가 작아보이는 효과 입니다."
+            },
+            { //05번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "5",
+                answerAsk: "디자인 원리 중 구성 형식에서 중요한 역할을 하며, 부피, 중량 등 물리적인 구조와 색채에서 시각적인 안정감을 이룬 것을 말하며, 크게 대칭과 비대칭, 방사대칭으로 구분하는 것은?",
+                answerChoice: [
+                    "반복",
+                    "균형",
+                    "조화",
+                    "대비"
+                ],
+                answerResult: "균형",
+                answerEx: "시각적인 안정감을 위해서는 균형이 항상 중요합니다."
+            },
+            { //06번
+                answerType: "웹디자인 기능사 2014년 04회",
+                answerNum: "6",
+                answerAsk: "V(디자인가치)=P(성능)/C(비용) 와 관계있는 디자인 조건은?",
+                answerChoice: [
+                    "합목적성",
+                    "경제성",
+                    "심미성",
+                    "독창성"
+                ],
+                answerResult: "경제성",
+                answerEx: "전체적인 가치를 따지기 위해서는 조건 중 경제성입니다.."
+            }
         ];
 
         const quizQuestion = document.querySelector(".quiz__question");                 //문제 번호, 질문
