--- a/javascript/study/web_image_making_deer.html
+++ b/javascript/study/web_image_making_deer.html
@@ -139,7 +139,7 @@
                     <p class="t_box">저작권 free 목업을 통해 제작한 일러스트를 제품에 입혀봅니다.
                     </p>
                     <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_mockup_screenshot.jpg" alt="">
-
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/deer_mockup_screenshot2.jpg" alt="">
                 </div>
                 <!-- 1번 끝 -->
             </div>
