--- a/javascript/study/web_quizEffect_06.html
+++ b/javascript/study/web_quizEffect_06.html
@@ -214,9 +214,9 @@ const answerQuiz = () =&gt; {
                 "채도대비",
                 "계시대비",
                 "명도대비",
-                "제품디자인"
+                "한란대비"
             ],
-            answerResult: "제품디자인",
+            answerResult: "한란대비",
             answerEx: "색상을 순서를 정하여 연속적으로 시간차를 두고 보면서 각각 색이 보이는 변화로 음성잔상과 유사한 현상이며, 먼저 본 색의 잔상에 영향을 받습니다."
         },
         { //03번
