--- a/javascript/effect/quizEffect06.html
+++ b/javascript/effect/quizEffect06.html
@@ -251,6 +251,7 @@
             }
             quizCount++
             updateQuiz(quizCount);
+            // quizView.classList.remove("like", "dislike");
             quizView.classList.remove("like", "dislike");
 
             // quizConfirm.textContent = "총"+quizInfo.length+"문제 중에"+quizScore+"문제를 맞추었습니다."
