--- a/javascript/index.html
+++ b/javascript/index.html
@@ -41,16 +41,16 @@
         /* 강아지 */
         .dog {
             position: absolute;
-            top: 210px;
-            left: 450px;
+            top: 200px;
+            left: 550px;
         }
 
         .dog .wrap {
             width: 300px;
             height: 300px;
-            background: #0066ff;
+            background: #f2f2f7;
             position: relative;
-            box-shadow: 0 -10px 0 0 #0057d9;
+            box-shadow: 0 -10px 0 0 #b5b5bf;
             border-radius: 50%;
         }
 
@@ -140,7 +140,7 @@
             width: 45px;
             height: 40px;
             position: absolute;
-            background: #e6e6e6;
+            background: #d6d6e1;
             border-radius: 15px;
             bottom: 0px;
             overflow: hidden;
@@ -153,11 +153,11 @@
             position: absolute;
             width: 3px;
             height: 15px;
-            background: #010101;
+            background: #9f9fc4;
             bottom: 0;
             left: 12.5px;
             border-radius: 50px 50px 0 0;
-            box-shadow: 15px 0 0 #010101;
+            box-shadow: 15px 0 0 #9f9fc4;
         }
 
         .dog .body .head {
@@ -182,7 +182,7 @@
 
         .dog .body .head .inner .spot {
             position: absolute;
-            background: #252510;
+            background: #616d8f;
             width: 100px;
             height: 110px;
             border-radius: 100%;
@@ -195,8 +195,8 @@
             position: absolute;
             width: 65px;
             height: 100px;
-            background: #131308;
-            box-shadow: inset -5px 0 0 15px #252510;
+            background: #39435e;
+            box-shadow: inset -5px 0 0 15px #616d8f;
             top: -50px;
             z-index: -5;
             left: -10px;
@@ -211,7 +211,7 @@
             position: absolute;
             width: 50px;
             height: 55px;
-            background: #252510;
+            background: #616d8f;
             z-index: -1;
             transform: translateZ(-3px) rotate(-20deg);
             border-radius: 0 0 100% 100%;
@@ -223,7 +223,7 @@
             left: auto;
             right: -10px;
             border-radius: 300px 100px 150px 50px/600px 100px 350px 50px;
-            background: #cccccc;
+            background: #d6d6e1;
             box-shadow: inset 5px 0 0 15px #fff;
             transform-origin: 0% 100%;
         }
@@ -568,8 +568,8 @@
                 </svg>
                 <div class="text_cont">
                     <h4>JavaScript</h4>
-                    <p>왼쪽의 버튼을 통해 메뉴를 탐색해보세요</p>
-                    <p>불 끄기/켜기 기능을 "일부만" 지원합니다.</p>
+                    <p>메뉴는 왼쪽에 몰아두었어요!</p>
+                    <p>시험삼아 불 끄고 켜는 기능을 넣어봤어요!</p>
                 </div>
             </div>
             <!-- 강아지 끝 -->
