--- a/javascript/index.html
+++ b/javascript/index.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
+        .header_nav ul li a:hover .dog>.wrap{
+            background: red !important;
+            box-shadow: 0 -10px 0 0 #37377d;
+        }
         /* 강아지 텍스트 */
         .dog .text_cont {
             padding-top: 40px;
@@ -27,6 +31,7 @@
         }
 
         .dog .text_cont h4 {
+            font-weight: bold;
             font-size: 40px;
             background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
             -webkit-background-clip: text;
@@ -461,7 +466,7 @@
 
 <body>
     <header id="header">
-        <h1><a href="index.html">Javascript</a></h1>
+        <h1><a href="index.html" >Javascript</a></h1>
         <div style="margin:0 auto;
                     background-color: #f2f2f7;
                     width: 115px;
@@ -567,7 +572,7 @@
                     </defs>
                 </svg>
                 <div class="text_cont">
-                    <h4>JavaScript</h4>
+                    <h4>메인화면</h4>
                     <p>메뉴는 왼쪽에 몰아두었어요!</p>
                     <p>시험삼아 불 끄고 켜는 기능을 넣어봤어요!</p>
                 </div>
